@anthony-tarantini - updating .gitignore